--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 
 </head>
 
 <body>
     <!-- main content -->
     <div class="main">
-
+        <h1>A page about Amanda Reis</h1>
+        <p>Bla bla bla Amanda Reis....</p>
+        <ol>
+            <li>Brazil</li>
+            <li>line 2</li>
+            <li>line3</li>
+            <li>line4</li>
+        
+        </ol>
     </div>
     <!-- /main content -->
 </body>
