--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
         <h1>A page about Amanda Reis</h1>
         <p>Bla bla bla Amanda Reis....</p>
         <ol>
-            <li>Brazil</li>
-            <li>line 2</li>
-            <li>line3</li>
-            <li>line4</li>
+            <li>I`m from Brazil</li>
+            <li>I love Pandas</li>
+            <li>I speak portuguese</li>
         
         </ol>
     </div>
