--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>A page about Amanda Reis</h1>
         <p>Bla bla bla Amanda Reis....</p>
         <ol>
-            <li>I`m from Brazil</li>
+            <li>Graduate</li>
             <li>line 2</li>
             <li>line3</li>
             <li>line4</li>
